--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Install dependencies 
-        run: pip install -r ./requirement.txt
+        run: pip install -r ./requirements.txt
       - name: Execute all tests 
         run: python -m unittest discover -s ./src
       - name: Execute coverage report 
