--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,6 @@
 name: Validate test
 run-name: ${{ github.actor }} is running test on ${{ github.ref }}
-on: [push]
+on: [push, pull_request]
 jobs:
   run-tests:
     runs-on: ubuntu-latest
